Moving branches into DWR project